--- a/src/license.html
+++ b/src/license.html
@@ -3,7 +3,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <title>GNU General Public License v3.0 - GNU Project - Free Software Foundation (FSF)</title>
  <link rel="alternate" type="application/rdf+xml" href="http://www.gnu.org/licenses/gpl-3.0.rdf"> 
- <link rel="stylesheet" href="src/css/license.css" type="text/css" />
+ <link rel="stylesheet" href="./components/css/license.css" type="text/css" />
 </head>
 <body>
 <h3 style="text-align: center;">GNU GENERAL PUBLIC LICENSE</h3>
