--- a/src/page2.html
+++ b/src/page2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="src/css/main.css">
+  <link rel="stylesheet" href="./components/css/main.css">
   <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
   <!-- FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,17 +19,19 @@
   </div>
 
   <header>
-    <div class="logo">
-      <img src="src/images/logo.png" alt="AvdanOS Logo" width="48px">
-    </div>
+    <div class="title">
+        <img src="./components/images/titlelogo.png" height="20px" class="titlelogo" />
+        &nbsp; &nbsp;
+        <p>AvdanOS Imager</p>
+      </div>
     <div class="buttons">
-      <button id="minBtn" href="" class="btn"><img src="src/images/minimize.svg" height="15px"></button>
-      <button id="closeBtn" href="" class="btn"><img src="src/images/close.svg" height="16px"></button>
+      <button id="minBtn" href="" class="btn"><img src="./components/images/minimize.svg" height="15px"></button>
+      <button id="closeBtn" href="" class="btn"><img src="./components/images/close.svg" height="16px"></button>
     </div>
   </header>
   <main>
     <div class="licensetxt"><h1>License</h1></div>
-    <div id="license"><p><iframe src="license.html" class="licenseiframe" width="640px" height="250px" frameborder=0></iframe></p></div>
+    <div id="license"><p><iframe src="license.html" class="licenseiframe" width="640px" height="250px" frameborder=0 style="border-radius: 6px;"></iframe></p></div>
   </main>
   <footer>
     <div class="left">
@@ -39,7 +41,8 @@
       <button class="nextBtn" id="nextBtn" onclick="window.location.replace('page3.html')">Agree&nbsp;&nbsp;<i class="fa-solid fa-check"></i></i></button>
     </div>
   </footer>
-  <script src="renderer.js"></script>
+  <script src="./components/js/renderer.js"></script>
+  <script src="./components/js/licenserpc.js"></script>
 </body>
 
 </html>
