--- a/src/splash.html
+++ b/src/splash.html
@@ -6,7 +6,7 @@
     <body>
         <main>
             <div class="content">
-                <h1>The application is loading...</h1>
+                <img src="./components/images/logofullwhite.png">
             </div>
         </main>    
     </body>
