Fixed some inconsistencies

--- a/src/downloading.html
+++ b/src/downloading.html
@@ -35,7 +35,7 @@
     </header>
     <main>
       <div class="avdanosflashingtext">
-        <h1>Downloading..</h1>
+        <h1>Downloading...</h1>
       </div>
       <br />
       <button onClick="setBar(40);">40%</button>
