--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <button
           class="nextBtn"
           id="nextBtn"
-          onclick="window.location.replace('page2.html')"
+          onclick="window.location.replace('licensepage.html')"
         >
           &nbsp;&nbsp;Next&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i>&nbsp;&nbsp;
         </button>
