--- a/src/license.html
+++ b/src/license.html
@@ -10,7 +10,7 @@
 <p style="text-align: center;">Version 3, 29 June 2007</p>
 
 <p>Copyright © 2007 Free Software Foundation, Inc.
- &lt;<a href="https://fsf.org/">https://fsf.org/</a>&gt;</p><p>
+ &lt;<a href="https://fsf.org/">fsf.org</a>&gt;</p><p>
  Everyone is permitted to copy and distribute verbatim copies
  of this license document, but changing it is not allowed.</p>
 
@@ -681,14 +681,14 @@ might be different; for a GUI interface, you would use an “about box”.</p>
 <p>You should also get your employer (if you work as a programmer) or school,
 if any, to sign a “copyright disclaimer” for the program, if necessary.
 For more information on this, and how to apply and follow the GNU GPL, see
-&lt;<a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>&gt;.</p>
+&lt;<a href="https://www.gnu.org/licenses/">gnu.org/licenses</a>&gt;.</p>
 
 <p>The GNU General Public License does not permit incorporating your program
 into proprietary programs.  If your program is a subroutine library, you
 may consider it more useful to permit linking proprietary applications with
 the library.  If this is what you want to do, use the GNU Lesser General
 Public License instead of this License.  But first, please read
-&lt;<a href="https://www.gnu.org/licenses/why-not-lgpl.html">https://www.gnu.org/licenses/why-not-lgpl.html</a>&gt;.</p>
+&lt;<a href="https://www.gnu.org/licenses/why-not-lgpl.html">gnu.org/licenses/why-not-lgpl.html</a>&gt;.</p>
 
 
 </body></html>
